<?xml version="1.0" encoding="utf-8"?><!--Menu for BooksEditorActivity-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.BooksEditorActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <!--This will intent to a Dialer with Contact details of supplier-->
    <item
        android:id="@+id/action_contact_supplier"
        android:title="@string/contact_supplier"
        app:showAsAction="never" />

    <!--Delete current book-->
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_book"
        app:showAsAction="never" />

</menu>